Header overlap of messages issue fixed

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,6 +3,7 @@
   transition: all 0.1s ease;
 
   #brand {
+    height: 100px;
     z-index: 99;
   }
 
